--- a/index.html
+++ b/index.html
@@ -10,14 +10,25 @@
 </head>
 <body>
     <div id="container">
-        <div id="mathExpression"></div>
-        <div id="mathAnswer">
-            <button id="answer1Btn" onclick="checkAnswer(1)">+</button>
-            <button id="answer2Btn" onclick = "checkAnswer(2)">-</button>
+        <div id="math">
+            <div id="mathExpression"></div>
+            <div id="mathAnswer"></div>
         </div>
-        <button id="startGame"></button>
-        <div id="correctCount"></div>
-        <div id="wrongCount"></div>
+        <div id="section">
+            <div id="buttons"><input type="submit" class="btn" id="startGame" value="Alusta mängu" onclick="startGame()"></div>
+            <select id="numbersToPlay">
+                <option value="2" selected="selected">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+            </select>
+            <div id="correctCount"></div>
+            <div id="wrongCount"></div>
+        </div>
+        
+    </div>
+    <div id="myProgress">
+        <div id="myBar"></div>
     </div>
 
     <script src="index.js"></script>
