--- a/index.html
+++ b/index.html
@@ -9,23 +9,28 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
-    <div id="container">
-        <div id="math">
-            <div id="mathExpression"></div>
-            <div id="mathAnswer"></div>
-        </div>
-        <div id="section">
-            <div id="buttons"><input type="submit" class="btn" id="startGame" value="Alusta mängu" onclick="startGame()"></div>
+    <div id="math">
+        <div id="mathExpression"></div>
+        <div id="mathAnswer"></div>
+    </div>
+    <div id="section">
+        <div id="buttons">
+            <input type="submit" class="btn" id="startGame" value="Alusta mängu" onclick="startGame()">
             <select id="numbersToPlay">
                 <option value="2" selected="selected">2</option>
                 <option value="3">3</option>
                 <option value="4">4</option>
                 <option value="5">5</option>
             </select>
-            <div id="correctCount"></div>
-            <div id="wrongCount"></div>
         </div>
-        
+        <table>
+            <tr>
+            <td>Õigeid: <span id="correctCount">0</span></td>
+            <td>Valesid: <span id="wrongCount">0/5</span></td>
+            <td>Skoor: <span id="score">0</span></td>
+        </tr>
+        </table>
+    
     </div>
     <div id="myProgress">
         <div id="myBar"></div>
