--- a/index.html
+++ b/index.html
@@ -10,26 +10,19 @@
 </head>
 <body>
     <div id="math">
-        <div id="mathExpression"></div>
-        <div id="mathAnswer"></div>
+        <div id="mathExpression" class="math"></div>
+        <div id="mathAnswer" class="math mathBtn"></div>
     </div>
     <div id="section">
-        <div id="buttons">
-            <input type="submit" class="btn" id="startGame" value="Alusta mängu" onclick="startGame()">
-            <select id="numbersToPlay">
-                <option value="2" selected="selected">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-            </select>
-        </div>
-        <table>
+        <div id="scoreTable">
+        <!--<table>
             <tr>
             <td>Õigeid: <span id="correctCount">0</span></td>
             <td>Valesid: <span id="wrongCount">0/5</span></td>
             <td>Skoor: <span id="score">0</span></td>
         </tr>
-        </table>
+        </table>-->
+        </div>
     
     </div>
     <div id="myProgress">
