Lisatud noolte funktsionaalsus ja palju muud

--- a/index.html
+++ b/index.html
@@ -12,23 +12,17 @@
     <div id="math">
         <div id="mathExpression" class="math"></div>
         <div id="mathAnswer" class="math mathBtn"></div>
-    </div>
-    <div id="section">
-        <div id="scoreTable">
-        <!--<table>
-            <tr>
-            <td>Õigeid: <span id="correctCount">0</span></td>
-            <td>Valesid: <span id="wrongCount">0/5</span></td>
-            <td>Skoor: <span id="score">0</span></td>
-        </tr>
-        </table>-->
-        </div>
-    
+        
     </div>
     <div id="myProgress">
         <div id="myBar"></div>
     </div>
-
+    <div id="section">
+        <div id="scoreTable"></div>
+    </div>
+    <div id="arrows" class="math mathBtn"><h3>Spikker:</h3><p><span id="left" class="arrow">&larr;</span> - vasak vastuse nupp</p><p><span id="down" class ="arrow">&darr;</span> - keskmine vastuse nupp</p><p><span id="right" class = "arrow">&rarr;</span> - parem vastuse nupp</p></div>
     <script src="index.js"></script>
 </body>
+
+<footer><p>Gertin Pakkonen. <a href="http://github.com/gertpak/1kodutoo" target="_blank">Repositoorium</a></p></footer>
 </html>
