--- a/index.html
+++ b/index.html
@@ -24,5 +24,5 @@
     <script src="index.js"></script>
 </body>
 
-<footer><p>Gertin Pakkonen. <a href="http://github.com/gertpak/1kodutoo" target="_blank">Repositoorium</a></p></footer>
+<footer><p>Gertin Pakkonen. <a href="https://github.com/gertpak/iseseisev-projekt" target="_blank">Repositoorium</a></p></footer>
 </html>
