--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="et">
+<html lang="en" manifest="offline.manifest">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="favicon.png">
+    <link rel="manifest" href="manifest.webmanifest">
     <title>Matemaatiline mäng</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
     <div id="math">
@@ -20,9 +21,11 @@
     <div id="section">
         <div id="scoreTable"></div>
     </div>
+
     <div id="arrows" class="math mathBtn"><h3>Spikker:</h3><p><span id="left" class="arrow">&larr;</span> - vasak vastuse nupp</p><p><span id="down" class ="arrow">&darr;</span> - keskmine vastuse nupp</p><p><span id="right" class = "arrow">&rarr;</span> - parem vastuse nupp</p></div>
-    <script src="index.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="index.js" DEFER></script>
 </body>
 
-<footer><p>Gertin Pakkonen. <a href="https://github.com/gertpak/iseseisev-projekt" target="_blank">Repositoorium</a></p></footer>
+<footer><p>Gertin Pakkonen. <a href="https://github.com/gertpak/iseseisev-projekt" target="_blank">Repositoorium</a></p><input type="submit" id="addButton" class="mathBtn" value="Lisa seadmesse!"></footer>
 </html>
